# automate_stuffs_with_python

./: .gitignore  Makefile  README.md  local.env  logging_example.py  pyproject.toml
blog_post/: blog_post.md  validate_cpf.py
regular_expressions/: begin_finish_regex.py  phone_list_tuple_regex.py  phone_number_regex.py  phone_number_test.py  repetition_regex.py  substitution_regex.py
regular_expressions/project/: phone_and_email.py  send_email.py  send_email_debugmode.py  template_email.html  to_csv.py
