[tool.poetry]
name = "automate_stuffs_with_python"
version = "0.1.0"
description = ""
authors = ["Paulo <pauloestrella1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
